# Copyright (c) 2022 The Qorai Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//qorai/components/qorai_page_graph/common/buildflags.gni")

qorai_v8_headers_sources = []
qorai_v8_headers_public_deps =
    [ "//qorai/components/qorai_page_graph/common:buildflags" ]

if (enable_qorai_page_graph) {
  qorai_v8_headers_sources +=
      [ "//qorai/v8/include/v8-isolate-page-graph-utils.h" ]
}
