# Copyright (c) 2025 The Qorai Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

qorai_browser_content_settings_deps = [
  "//qorai/components/qorai_shields/content/browser",
  "//components/user_prefs",
]
